Change book_user update to updateWithUsername